Query: typo corrected: tyco2 should have been tycho2
Until now the internal name of Gaia's Tycho2 database was mistakenly
written as 'tyco2', but it should have been 'tycho2'.

With this commit all the wrongly written names (in the source of Query and
also in the book) have been corrected.

This was reported by Carlos Morales Socorro.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10408,7 +10408,7 @@ Below is a list of the simplified names for the databases that have them.
 @item
 @code{dr2 --> gaiadr1.gaia_source}
 @item
-@code{tyco2 --> public.tyco2}
+@code{tycho2 --> public.tycho2}
 @item
 @code{hipparcos --> public.hipparcos}
 @end itemize
